:new: new dev version 24.0-SNAPSHOT; :ref: unified execptions in upstream; :ref: support for unified validation in RestExceptionResolver